# rootkit-fyc

./: README.md
client/src/: main.rs
driver/: Cargo.toml  driver.inx
driver/src/: lib.rs
driver/src/process/: target_process.rs
driver/src/utils/: mod.rs
dropper/: build.rs
dropper/src/checks/: checks.rs
examples/dropper/: Cargo.toml
examples/dropper/src/: main.rs
examples/dropper/src/checks/: checks.rs
examples/dropper/src/downloader/: downloader.rs
examples/hevd-dse-exploit/: Cargo.toml
examples/hevd-dse-exploit/src/: main.rs  util.rs
examples/wdm-client-template/second-driver-client/: Cargo.toml
examples/wdm-client-template/second-driver-client/src/: kernel_interface.rs  main.rs
examples/wdm-driver-template/first-driver/: README.md
examples/wdm-driver-template/first-driver/src/: lib.rs
examples/wdm-driver-template/second_driver/: Cargo.toml  first_driver.inx
examples/wdm-driver-template/second_driver/src/: lib.rs
examples/wdm-driver-template/second_driver/src/constants/: mod.rs
examples/wdm-driver-template/second_driver/src/hook/: mod.rs
examples/wdm-driver-template/second_driver/src/process/: mod.rs  shadowed_process.rs
examples/wdm-driver-template/second_driver/src/utils/: mod.rs
exercices/exercice-1/client/src/: kernel_interface.rs  main.rs
exercices/exercice-1/driver/: Cargo.toml  second_driver.inx
exercices/exercice-1/driver/src/: lib.rs
exercices/exercice-2/: Cargo.toml  exercice_2.inx
exercices/exercice-2/src/process/: mod.rs  shadowed_process.rs
hevd-dse-exploit/src/: main.rs
(+8 files in other folders)
